[gd_scene load_steps=4 format=2]

[ext_resource path="res://Models/Coin.glb" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Coin.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 0.2
height = 0.1

[node name="Coin" instance=ExtResource( 1 )]
collision_layer = 5
script = ExtResource( 2 )
object_to_outline_path = NodePath("Circle")

[node name="CollisionShape" type="CollisionShape" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )
[connection signal="interact" from="." to="." method="mark_ilha_done"]
[connection signal="start_interactable" from="." to="." method="set_outline_enabled" binds= [ true ]]
[connection signal="stop_interactable" from="." to="." method="set_outline_enabled" binds= [ false ]]
